--- a/po/tr.po
+++ b/po/tr.po
@@ -1314,7 +1314,7 @@ msgstr "Tarih & zaman:"
 
 #: ../data/geany.glade.h:276
 msgid ""
-"Specify a format for the the {datetime} wildcard. You can use any conversion "
+"Specify a format for the {datetime} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "{tarihzaman} değişkeni için bir biçim belirtin. ANSI C uyumlu karakterleri "
@@ -1322,7 +1322,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:277
 msgid ""
-"Specify a format for the the {year} wildcard. You can use any conversion "
+"Specify a format for the {year} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "{yıl} değişkeni için bir biçim belirtin. ANSI C uyumlu karakterleri "
@@ -1330,7 +1330,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:278
 msgid ""
-"Specify a format for the the {date} wildcard. You can use any conversion "
+"Specify a format for the {date} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "{tarih} değişkeni için bir biçim belirtin. ANSI C uyumlu karakterleri "
