--- a/po/ast.po
+++ b/po/ast.po
@@ -1360,7 +1360,7 @@ msgstr "Fecha y hora:"
 
 #: ../data/geany.glade.h:276
 msgid ""
-"Specify a format for the the {datetime} wildcard. You can use any conversion "
+"Specify a format for the {datetime} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Indica'l formatu del comodín {datetime}. Puedes usar cualisquier conversión "
@@ -1368,7 +1368,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:277
 msgid ""
-"Specify a format for the the {year} wildcard. You can use any conversion "
+"Specify a format for the {year} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Indica'l formatu de comodín {year}. Podemos usar cualisquier conversión "
@@ -1376,7 +1376,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:278
 msgid ""
-"Specify a format for the the {date} wildcard. You can use any conversion "
+"Specify a format for the {date} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Especificar un formatu pal comodín {fecha}. Tu puedes usar cualisquier "
