--- a/po/bg.po
+++ b/po/bg.po
@@ -1430,7 +1430,7 @@ msgstr ""
 #: ../data/geany.glade.h:276
 #, fuzzy
 msgid ""
-"Specify a format for the the {datetime} wildcard. You can use any conversion "
+"Specify a format for the {datetime} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Тук въведете потребителски формат за дата и време. Можете да използвате "
@@ -1440,7 +1440,7 @@ msgstr ""
 #: ../data/geany.glade.h:277
 #, fuzzy
 msgid ""
-"Specify a format for the the {year} wildcard. You can use any conversion "
+"Specify a format for the {year} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Тук въведете потребителски формат за дата и време. Можете да използвате "
@@ -1450,7 +1450,7 @@ msgstr ""
 #: ../data/geany.glade.h:278
 #, fuzzy
 msgid ""
-"Specify a format for the the {date} wildcard. You can use any conversion "
+"Specify a format for the {date} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Тук въведете потребителски формат за дата и време. Можете да използвате "
