--- a/po/ca.po
+++ b/po/ca.po
@@ -1327,7 +1327,7 @@ msgstr "Data i hora:"
 
 #: ../data/geany.glade.h:276
 msgid ""
-"Specify a format for the the {datetime} wildcard. You can use any conversion "
+"Specify a format for the {datetime} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Indiqueu el format del comodí {datetime}. Podeu utilitzar qualsevol variable "
@@ -1335,7 +1335,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:277
 msgid ""
-"Specify a format for the the {year} wildcard. You can use any conversion "
+"Specify a format for the {year} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Indiqueu el format del comodí {year}. Podeu utilitzar qualsevol variable "
@@ -1343,7 +1343,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:278
 msgid ""
-"Specify a format for the the {date} wildcard. You can use any conversion "
+"Specify a format for the {date} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Indiqueu el format del comodí {date}. Podeu utilitzar qualsevol variable "
