--- a/po/cs.po
+++ b/po/cs.po
@@ -1327,7 +1327,7 @@ msgstr "Datum a čas:"
 
 #: ../data/geany.glade.h:276
 msgid ""
-"Specify a format for the the {datetime} wildcard. You can use any conversion "
+"Specify a format for the {datetime} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Zadejte formát pro {datetime} symbol šablony. Můžete použít stejné konverzní "
@@ -1335,7 +1335,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:277
 msgid ""
-"Specify a format for the the {year} wildcard. You can use any conversion "
+"Specify a format for the {year} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Zadejte formát pro {year} symbol šablony. Můžete použít stejné konverzní "
@@ -1343,7 +1343,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:278
 msgid ""
-"Specify a format for the the {date} wildcard. You can use any conversion "
+"Specify a format for the {date} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Zadejte formát pro {date} symbol šablony. Můžete použít stejné konverzní "
