--- a/po/de.po
+++ b/po/de.po
@@ -1369,7 +1369,7 @@ msgstr "Datum & Zeit:"
 
 #: ../data/geany.glade.h:279
 msgid ""
-"Specify a format for the the {datetime} wildcard. You can use any conversion "
+"Specify a format for the {datetime} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Geben Sie ein Datumsformat für den Platzhalter {datetime} an. Dabei können "
@@ -1378,7 +1378,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:280
 msgid ""
-"Specify a format for the the {year} wildcard. You can use any conversion "
+"Specify a format for the {year} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Geben Sie ein Datumsformat für den Platzhalter {year} an. Dabei können alle "
@@ -1387,7 +1387,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:281
 msgid ""
-"Specify a format for the the {date} wildcard. You can use any conversion "
+"Specify a format for the {date} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Geben Sie ein Datumsformat für den Platzhalter {date} an. Dabei können alle "
