--- a/po/el.po
+++ b/po/el.po
@@ -1367,7 +1367,7 @@ msgstr "Ημερομηνία & ώρα:"
 
 #: ../data/geany.glade.h:279
 msgid ""
-"Specify a format for the the {datetime} wildcard. You can use any conversion "
+"Specify a format for the {datetime} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Προσδιορίζει μια μορφή για {datetime} wildcard. Μπορείτε να χρησιμοποιήσετε "
@@ -1376,7 +1376,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:280
 msgid ""
-"Specify a format for the the {year} wildcard. You can use any conversion "
+"Specify a format for the {year} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Προσδιορίζει μια μορφή για {year} wildcard. Μπορείτε να χρησιμοποιήσετε "
@@ -1385,7 +1385,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:281
 msgid ""
-"Specify a format for the the {date} wildcard. You can use any conversion "
+"Specify a format for the {date} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Προσδιορίζει μια μορφή για {date} wildcard. Μπορείτε να χρησιμοποιήσετε "
