--- a/po/es.po
+++ b/po/es.po
@@ -1351,7 +1351,7 @@ msgstr "Fecha y hora:"
 
 #: ../data/geany.glade.h:276
 msgid ""
-"Specify a format for the the {datetime} wildcard. You can use any conversion "
+"Specify a format for the {datetime} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Introduzca aquí un formato de fecha y hora. Puede usar cualquier "
@@ -1360,7 +1360,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:277
 msgid ""
-"Specify a format for the the {year} wildcard. You can use any conversion "
+"Specify a format for the {year} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Introduzca aquí un formato de año. Puede usar cualquier especificador de "
@@ -1368,7 +1368,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:278
 msgid ""
-"Specify a format for the the {date} wildcard. You can use any conversion "
+"Specify a format for the {date} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Introduzca aquí un formato de fecha. Puede usar cualquier especificador de "
