--- a/po/fr.po
+++ b/po/fr.po
@@ -1387,7 +1387,7 @@ msgstr "Date et heure :"
 
 #: ../data/geany.glade.h:279
 msgid ""
-"Specify a format for the the {datetime} wildcard. You can use any conversion "
+"Specify a format for the {datetime} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Entrez ici un format de date et d'heure personnalisé. Vous pouvez utiliser "
@@ -1396,7 +1396,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:280
 msgid ""
-"Specify a format for the the {year} wildcard. You can use any conversion "
+"Specify a format for the {year} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Entrez ici un format d'année personnalisé. Vous pouvez utiliser tous les "
@@ -1405,7 +1405,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:281
 msgid ""
-"Specify a format for the the {date} wildcard. You can use any conversion "
+"Specify a format for the {date} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Entrez ici un format de date personnalisé. Vous pouvez utiliser tous les "
