--- a/po/id.po
+++ b/po/id.po
@@ -1139,15 +1139,15 @@ msgid "Date & time:"
 msgstr "Tanggal & Waktu:"
 
 #: ../data/geany.glade.h:276
-msgid "Specify a format for the the {datetime} wildcard. You can use any conversion specifiers which can be used with the ANSI C strftime function."
+msgid "Specify a format for the {datetime} wildcard. You can use any conversion specifiers which can be used with the ANSI C strftime function."
 msgstr "Menentukan format tampilan untuk {datetime} wildcard. Anda dapat memakai specifier konversi apapun yang dipakai pula oleh fungsi strftime ANSI C."
 
 #: ../data/geany.glade.h:277
-msgid "Specify a format for the the {year} wildcard. You can use any conversion specifiers which can be used with the ANSI C strftime function."
+msgid "Specify a format for the {year} wildcard. You can use any conversion specifiers which can be used with the ANSI C strftime function."
 msgstr "Menentukan format tampilan untuk {year} wildcard. Anda dapat memakai specifier konversi apapun yang dipakai pula oleh fungsi strftime ANSI C."
 
 #: ../data/geany.glade.h:278
-msgid "Specify a format for the the {date} wildcard. You can use any conversion specifiers which can be used with the ANSI C strftime function."
+msgid "Specify a format for the {date} wildcard. You can use any conversion specifiers which can be used with the ANSI C strftime function."
 msgstr "Menentukan format tampilan untuk {date} wildcard. Anda dapat memakai specifier konversi apapun yang dipakai pula oleh fungsi strftime ANSI C."
 
 #: ../data/geany.glade.h:279
