--- a/po/ja.po
+++ b/po/ja.po
@@ -1313,7 +1313,7 @@ msgstr "日時:"
 
 #: ../data/geany.glade.h:279
 msgid ""
-"Specify a format for the the {datetime} wildcard. You can use any conversion "
+"Specify a format for the {datetime} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "{datetime}の書式を指定してください。ANSI C の strftime 関数で用いられる変換指"
@@ -1321,7 +1321,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:280
 msgid ""
-"Specify a format for the the {year} wildcard. You can use any conversion "
+"Specify a format for the {year} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "{year}の書式を指定してください。ANSI C の strftime 関数で用いられる変換指定子"
@@ -1329,7 +1329,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:281
 msgid ""
-"Specify a format for the the {date} wildcard. You can use any conversion "
+"Specify a format for the {date} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "{date}の書式を指定してください。ANSI C の strftime 関数で用いられる変換指定子"
