--- a/po/lb.po
+++ b/po/lb.po
@@ -1372,7 +1372,7 @@ msgstr "Datum & Zäit:"
 
 #: ../data/geany.glade.h:276
 msgid ""
-"Specify a format for the the {datetime} wildcard. You can use any conversion "
+"Specify a format for the {datetime} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Gidd den Datumsformat fir den Specificateur {datetime} an. Dobäi kënnen all "
@@ -1381,7 +1381,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:277
 msgid ""
-"Specify a format for the the {year} wildcard. You can use any conversion "
+"Specify a format for the {year} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Gidd den Datumsformat fir den Specificateur {year} an. Dobäi kënnen all déi "
@@ -1390,7 +1390,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:278
 msgid ""
-"Specify a format for the the {date} wildcard. You can use any conversion "
+"Specify a format for the {date} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Gidd den Datumsformat fir den Specificateur {date} an. Dobäi kënnen all déi "
