--- a/po/lt.po
+++ b/po/lt.po
@@ -1312,7 +1312,7 @@ msgstr "Data ir laikas:"
 
 #: ../data/geany.glade.h:276
 msgid ""
-"Specify a format for the the {datetime} wildcard. You can use any conversion "
+"Specify a format for the {datetime} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Nurodykite {datetime} pakaitos simbolio formatą. Galite naudoti bet kurį "
@@ -1320,7 +1320,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:277
 msgid ""
-"Specify a format for the the {year} wildcard. You can use any conversion "
+"Specify a format for the {year} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Nurodykite {year} pakaitos simbolio formatą. Galite naudoti bet kurį simbolį "
@@ -1328,7 +1328,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:278
 msgid ""
-"Specify a format for the the {date} wildcard. You can use any conversion "
+"Specify a format for the {date} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Nurodykite {date} pakaitos simbolio formatą. Galite naudoti bet kurį simbolį "
