--- a/po/mn.po
+++ b/po/mn.po
@@ -1344,7 +1344,7 @@ msgstr ""
 #: ../data/geany.glade.h:276
 #, fuzzy
 msgid ""
-"Specify a format for the the {datetime} wildcard. You can use any conversion "
+"Specify a format for the {datetime} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Огноо болон цагны хэлбэрийг оруул. Хувиргалт хийхдээ ANSI Cи хэлний strftime "
@@ -1354,7 +1354,7 @@ msgstr ""
 #: ../data/geany.glade.h:277
 #, fuzzy
 msgid ""
-"Specify a format for the the {year} wildcard. You can use any conversion "
+"Specify a format for the {year} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Огноо болон цагны хэлбэрийг оруул. Хувиргалт хийхдээ ANSI Cи хэлний strftime "
@@ -1364,7 +1364,7 @@ msgstr ""
 #: ../data/geany.glade.h:278
 #, fuzzy
 msgid ""
-"Specify a format for the the {date} wildcard. You can use any conversion "
+"Specify a format for the {date} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Огноо болон цагны хэлбэрийг оруул. Хувиргалт хийхдээ ANSI Cи хэлний strftime "
