--- a/po/nl.po
+++ b/po/nl.po
@@ -1344,7 +1344,7 @@ msgstr "Datum & Tijd;"
 
 #: ../data/geany.glade.h:279
 msgid ""
-"Specify a format for the the {datetime} wildcard. You can use any conversion "
+"Specify a format for the {datetime} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Geef hier een aangepast formaat voor de {datetime} wildcard. U kunt gebruik "
@@ -1353,7 +1353,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:280
 msgid ""
-"Specify a format for the the {year} wildcard. You can use any conversion "
+"Specify a format for the {year} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Geef hier een aangepast formaat voor de {year} wildcard. U kunt gebruik "
@@ -1362,7 +1362,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:281
 msgid ""
-"Specify a format for the the {date} wildcard. You can use any conversion "
+"Specify a format for the {date} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Geef hier een aangepast formaat voor de {date} wildcard. U kunt gebruik "
