--- a/po/ro.po
+++ b/po/ro.po
@@ -1356,7 +1356,7 @@ msgstr "Data & ora:"
 #: ../data/geany.glade.h:276
 #, fuzzy
 msgid ""
-"Specify a format for the the {datetime} wildcard. You can use any conversion "
+"Specify a format for the {datetime} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Introduceți un format de dată și timp. Puteți folosi oricare dintre "
@@ -1365,7 +1365,7 @@ msgstr ""
 #: ../data/geany.glade.h:277
 #, fuzzy
 msgid ""
-"Specify a format for the the {year} wildcard. You can use any conversion "
+"Specify a format for the {year} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Introduceți un format de dată și timp. Puteți folosi oricare dintre "
@@ -1374,7 +1374,7 @@ msgstr ""
 #: ../data/geany.glade.h:278
 #, fuzzy
 msgid ""
-"Specify a format for the the {date} wildcard. You can use any conversion "
+"Specify a format for the {date} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Introduceți un format de dată și timp. Puteți folosi oricare dintre "
