--- a/po/sk.po
+++ b/po/sk.po
@@ -1301,7 +1301,7 @@ msgstr "Dátum a čas:"
 
 #: ../data/geany.glade.h:276
 msgid ""
-"Specify a format for the the {datetime} wildcard. You can use any conversion "
+"Specify a format for the {datetime} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Určuje formát značku {datetime}. Môžete použiť akýkoľvek zápis, ktorý je "
@@ -1309,7 +1309,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:277
 msgid ""
-"Specify a format for the the {year} wildcard. You can use any conversion "
+"Specify a format for the {year} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Ur%cuje formát pre značku {year}. Môžete použiť akýkoľvek zápis, ktorý je "
@@ -1317,7 +1317,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:278
 msgid ""
-"Specify a format for the the {date} wildcard. You can use any conversion "
+"Specify a format for the {date} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Určuje formát pre značku {date}. Môžete použiť akýkoľvek zápis, ktorý je "
