--- a/po/sr.po
+++ b/po/sr.po
@@ -1268,7 +1268,7 @@ msgstr "Датум и време:"
 #: ../data/geany.glade.h:279
 #, fuzzy
 msgid ""
-"Specify a format for the the {datetime} wildcard. You can use any conversion "
+"Specify a format for the {datetime} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Одреди формат за датум и време штампе који ће бити додати у заглавље на "
@@ -1277,7 +1277,7 @@ msgstr ""
 #: ../data/geany.glade.h:280
 #, fuzzy
 msgid ""
-"Specify a format for the the {year} wildcard. You can use any conversion "
+"Specify a format for the {year} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Одреди формат за датум и време штампе који ће бити додати у заглавље на "
@@ -1286,7 +1286,7 @@ msgstr ""
 #: ../data/geany.glade.h:281
 #, fuzzy
 msgid ""
-"Specify a format for the the {date} wildcard. You can use any conversion "
+"Specify a format for the {date} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Одреди формат за датум и време штампе који ће бити додати у заглавље на "
