--- a/po/uk.po
+++ b/po/uk.po
@@ -1383,7 +1383,7 @@ msgstr ""
 #: ../data/geany.glade.h:276
 #, fuzzy
 msgid ""
-"Specify a format for the the {datetime} wildcard. You can use any conversion "
+"Specify a format for the {datetime} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Задайте власний формати штампу дати та часу що буде доданий до головної "
@@ -1393,7 +1393,7 @@ msgstr ""
 #: ../data/geany.glade.h:277
 #, fuzzy
 msgid ""
-"Specify a format for the the {year} wildcard. You can use any conversion "
+"Specify a format for the {year} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Задайте власний формати штампу дати та часу що буде доданий до головної "
@@ -1403,7 +1403,7 @@ msgstr ""
 #: ../data/geany.glade.h:278
 #, fuzzy
 msgid ""
-"Specify a format for the the {date} wildcard. You can use any conversion "
+"Specify a format for the {date} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "Задайте власний формати штампу дати та часу що буде доданий до головної "
