--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -1272,7 +1272,7 @@ msgstr "日期 & 時間："
 
 #: ../data/geany.glade.h:276
 msgid ""
-"Specify a format for the the {datetime} wildcard. You can use any conversion "
+"Specify a format for the {datetime} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "指定用於 {datetime} 萬用變數的格式。您可以使用任何相容於 ANSI C strftime 函式"
@@ -1280,7 +1280,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:277
 msgid ""
-"Specify a format for the the {year} wildcard. You can use any conversion "
+"Specify a format for the {year} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "指定用於 {year} 萬用變數的格式。您可以使用任何相容於 ANSI C strftime 函式的轉"
@@ -1288,7 +1288,7 @@ msgstr ""
 
 #: ../data/geany.glade.h:278
 msgid ""
-"Specify a format for the the {date} wildcard. You can use any conversion "
+"Specify a format for the {date} wildcard. You can use any conversion "
 "specifiers which can be used with the ANSI C strftime function."
 msgstr ""
 "指定用於 {date} 萬用變數的格式。您可以使用任何相容於 ANSI C strftime 函式的轉"
