Fix typo in message
It was already fixed in source.

--- a/po/ast.po
+++ b/po/ast.po
@@ -4335,7 +4335,7 @@ msgstr "Usar secuencies d'_escape"
 
 #: ../src/search.c:329
 msgid ""
-"Replace \\\\, \\t, \\n, \\r and \\uXXXX (Unicode chararacters) with the "
+"Replace \\\\, \\t, \\n, \\r and \\uXXXX (Unicode characters) with the "
 "corresponding control characters"
 msgstr ""
 "Reemplaza \\\\, \\t, \\n, \\r i \\uXXXX (caráuteres Unicode) polos "
