--- a/po/cs.po
+++ b/po/cs.po
@@ -4230,7 +4230,7 @@ msgstr "Použít _escape sekvence"
 
 #: ../src/search.c:329
 msgid ""
-"Replace \\\\, \\t, \\n, \\r and \\uXXXX (Unicode chararacters) with the "
+"Replace \\\\, \\t, \\n, \\r and \\uXXXX (Unicode characters) with the "
 "corresponding control characters"
 msgstr ""
 "Nahradit \\\\, \\t, \\n, \\r a \\uXXXX (Unicode znaky) odpovídajícími "
