--- a/po/el.po
+++ b/po/el.po
@@ -4272,7 +4272,7 @@ msgstr "Χρήση ακολουθιών _διαφυγής"
 
 #: ../src/search.c:332
 msgid ""
-"Replace \\\\, \\t, \\n, \\r and \\uXXXX (Unicode chararacters) with the "
+"Replace \\\\, \\t, \\n, \\r and \\uXXXX (Unicode characters) with the "
 "corresponding control characters"
 msgstr ""
 "Αντικατάσταση \\\\, \\t, \\n, \\r και \\uXXXX (Unicode χαρακτήρες) με τους "
