--- a/po/id.po
+++ b/po/id.po
@@ -3885,7 +3885,7 @@ msgid "Use _escape sequences"
 msgstr "Gunakan _escape sequences"
 
 #: ../src/search.c:329
-msgid "Replace \\\\, \\t, \\n, \\r and \\uXXXX (Unicode chararacters) with the corresponding control characters"
+msgid "Replace \\\\, \\t, \\n, \\r and \\uXXXX (Unicode characters) with the corresponding control characters"
 msgstr "Ganti  \\\\, \\t, \\n, \\r dan  \\uXXXX (Karakter Unicode)dengan karakter kontrol penggantinya"
 
 #: ../src/search.c:338 ../src/search.c:968
