--- a/po/ro.po
+++ b/po/ro.po
@@ -4386,7 +4386,7 @@ msgstr "Folosește s_ecvențe întârziate"
 #: ../src/search.c:329
 #, fuzzy
 msgid ""
-"Replace \\\\, \\t, \\n, \\r and \\uXXXX (Unicode chararacters) with the "
+"Replace \\\\, \\t, \\n, \\r and \\uXXXX (Unicode characters) with the "
 "corresponding control characters"
 msgstr ""
 "Înlocuiește \\\\, \\t, \\n, \\r și \\uXXXX (caractere Unicode) cu "
