--- a/po/es.po
+++ b/po/es.po
@@ -4282,7 +4282,7 @@ msgstr "Usar secuencias de _escape"
 
 #: ../src/search.c:329
 msgid ""
-"Replace \\\\, \\t, \\n, \\r and \\uXXXX (Unicode chararacters) with the "
+"Replace \\\\, \\t, \\n, \\r and \\uXXXX (Unicode characters) with the "
 "corresponding control characters"
 msgstr ""
 "Reemplaza \\\\, \\t, \\n, \\r y \\uXXXX (caracteres Unicode) con el carácter "
