--- a/po/et.po
+++ b/po/et.po
@@ -4092,7 +4092,7 @@ msgstr "Kasuta _paojadasid"
 
 #: ../src/search.c:329
 msgid ""
-"Replace \\\\, \\t, \\n, \\r and \\uXXXX (Unicode chararacters) with the "
+"Replace \\\\, \\t, \\n, \\r and \\uXXXX (Unicode characters) with the "
 "corresponding control characters"
 msgstr "Asenda \\\\, \\t, \\n, \\r ja \\uXXXX (Unicode sümbolid) juhtmärkidega"
 
