--- a/po/it.po
+++ b/po/it.po
@@ -4324,7 +4324,7 @@ msgstr "Usa sequenze di _escape"
 
 #: ../src/search.c:332
 msgid ""
-"Replace \\\\, \\t, \\n, \\r and \\uXXXX (Unicode chararacters) with the "
+"Replace \\\\, \\t, \\n, \\r and \\uXXXX (Unicode characters) with the "
 "corresponding control characters"
 msgstr ""
 "Sostituisci \\\\, \\t, \\n, \\r e \\uXXXX (Caratteri Unicode) con i "
