--- a/po/lb.po
+++ b/po/lb.po
@@ -4379,7 +4379,7 @@ msgstr "_Escape Sequenzen benotzen"
 
 #: ../src/search.c:329
 msgid ""
-"Replace \\\\, \\t, \\n, \\r and \\uXXXX (Unicode chararacters) with the "
+"Replace \\\\, \\t, \\n, \\r and \\uXXXX (Unicode characters) with the "
 "corresponding control characters"
 msgstr ""
 "Ersetzt \\\\, \\t, \\n, \\r an \\uXXXX (Unicode Zeechen) duerch déi "
