--- a/po/lt.po
+++ b/po/lt.po
@@ -4211,7 +4211,7 @@ msgstr "Naudoti „_escape“ sekas"
 
 #: ../src/search.c:329
 msgid ""
-"Replace \\\\, \\t, \\n, \\r and \\uXXXX (Unicode chararacters) with the "
+"Replace \\\\, \\t, \\n, \\r and \\uXXXX (Unicode characters) with the "
 "corresponding control characters"
 msgstr ""
 "Pakeisti \\\\, \\t, \\n, \\r ir \\uXXXX (unikodo simboliai) atitinkamais "
