--- a/po/sk.po
+++ b/po/sk.po
@@ -4200,7 +4200,7 @@ msgstr "Použiť _escape sekvencie"
 
 #: ../src/search.c:329
 msgid ""
-"Replace \\\\, \\t, \\n, \\r and \\uXXXX (Unicode chararacters) with the "
+"Replace \\\\, \\t, \\n, \\r and \\uXXXX (Unicode characters) with the "
 "corresponding control characters"
 msgstr ""
 "Nahraď \\\\, \\t, \\n \\r, \\uXXXX (Znak Unicode) reprezentujúcim kontrolným "
